--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="./assets/favicon.png" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+
+   <link rel="icon" type="image/png" href="./assets/favicon.png" />
+    <link rel="stylesheet" href="./Styles.css" />
     <title>NLW Space Time</title>
   </head>
   <body>
-    <div>
+    <nav>
+    <a href="https://www.youtube.com/channel/UCwaQBGowQAH9wY9WX6HoUYQ" target="_blank" class="memory">
       <small> 11 de setembro</small>
       <h1>Jornada do zero a Primeira Vaga</h1>
       <img
@@ -21,7 +28,7 @@
         adicionar memórias à uma timeline de acontecimentos marcantes da sua
         vida.
       </p>
-    </div>
+    </a>
     
   </body>
 </html>
