--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <title>NLW Space Time</title>
   </head>
   <body>
+    <aside>
+      
+    </aside>
     <nav>
     <a href="https://www.youtube.com/channel/UCwaQBGowQAH9wY9WX6HoUYQ" target="_blank" class="memory">
       <small> 11 de setembro</small>
