--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <aside>
-      
+      <img src="./assets/logo.svg" alt="logo Nlw Spacetime"/>
     </aside>
     <nav>
     <a href="https://www.youtube.com/channel/UCwaQBGowQAH9wY9WX6HoUYQ" target="_blank" class="memory">
