--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
   <body>
     <aside>
       <img src="./assets/logo.svg" alt="logo Nlw Spacetime"/>
+      <img src="./assets/emanuel.jpeg" alt=" Foto do emanuelaln">
+      <p>
+        Cápsula do tempo de <br/> 
+        <strong> Emanuel Diatshambo Djuma</strong>
+      </p>
+       <span>
+          Feito com 💜 no NLW RocketSeat
+        </span>
     </aside>
     <nav>
     <a href="https://www.youtube.com/channel/UCwaQBGowQAH9wY9WX6HoUYQ" target="_blank" class="memory">
